crates/sotf-plugins/tests/snapshots/render_plan_snapshots__dither__dither__desktop_1200.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "dither",
  "width": 1200.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "md",
  "group_direction": "row",
  "slider_height": 180.0,
  "show_visualizations": true,
  "columns_visible": [
    "config",
    "main"
  ],
  "columns_collapsed": [],
  "visible_group_ids": [
    "DITHER"
  ],
  "overflow_group_ids": [],
  "config_controls": [
    {
      "param_index": 1,
      "param_name": "Noise Shaping",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false,
      "enabled": true
    }
  ],
  "main_groups": [
    {
      "id": "DITHER",
      "title": "DITHER",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Bit Depth",
          "control_type": "selector",
          "unit": "",
          "range": [
            0.0,
            2.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 2,
          "param_name": "Dither Type",
          "control_type": "selector",
          "unit": "",
          "range": [
            0.0,
            2.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [],
  "viz_slots": [],
  "dynamic_sections": []
}
